--- a/Allup/appsettings.json
+++ b/Allup/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Allup;Trusted_Connection=True;"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Allup1;Trusted_Connection=True;"
   }
 }
